# safe-regex

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Readme.md  check-all.sh  check.sh  ci-check.sh  clean.sh  generate-readme.sh  git-push.sh  lib.sh  release.sh  update-readme.sh
bench/: Cargo.toml
bench/benches/: lib.rs
bench/src/: lib.rs
safe-proc-macro2/: Cargo.toml  README.md  build.rs
safe-proc-macro2/src/: detection.rs  fallback.rs  lib.rs  wrapper.rs
safe-proc-macro2/tests/: comments.rs  marker.rs  test.rs  test_fmt.rs
safe-proc-macro2/tests/ui/: test-not-send.rs  test-not-send.stderr
safe-quote/: Cargo.toml  README.md
safe-quote/benches/: bench.rs
safe-quote/src/: ext.rs  format.rs  ident_fragment.rs  lib.rs  runtime.rs  spanned.rs  to_tokens.rs
safe-quote/tests/: test.rs
safe-quote/tests/ui/: does-not-have-iter-interpolated-dup.rs  does-not-have-iter-interpolated.rs  does-not-have-iter-separated.rs  does-not-have-iter.rs  not-quotable.rs  not-repeatable.rs  not-repeatable.stderr  wrong-type-span.rs
safe-regex/: Cargo.toml  Readme.md
safe-regex-compiler/: Cargo.toml  Readme.md
safe-regex-compiler/src/: generator.rs  lib.rs  macro_generator.rs  parser.rs
safe-regex-compiler/tests/: impl_regex.rs  nfa_with_broken_capturing.rs  nfa_without_capturing.rs  parse.rs  parser_enums.rs  parser_parse.rs  type_experiment.rs
safe-regex-macro/: Cargo.toml  Readme.md
safe-regex-macro-impl/: Cargo.toml
safe-regex-macro-impl/tests/: enums.rs
safe-regex-macro/src/: lib.rs
safe-regex-macro/tests/: test.rs
safe-regex-parser/: Cargo.toml  Readme.md
safe-regex-parser/src/: lib.rs
safe-regex-parser/tests/: enums.rs
safe-regex/src/: lib.rs  multi_peekable.rs
safe-regex/tests/: dfa_single_pass.rs  machine.rs  nfa_without_capturing.rs  regex_trait.rs  test.rs  test2.rs  type_experiment.rs
src/: lib.rs  simple.rs
tests/: simple.rs  test.rs
