[package]
name = "safe-quote"
version = "1.0.15" # don't forget to update html_root_url, version in readme for breaking changes
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A fork of `quote` crate that adds `forbid(unsafe_code)` and depends on `safe-proc-macro2` instead of `proc-macro2`"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
documentation = "https://docs.rs/safe-quote/"
keywords = ["syn"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2018"
autobenches = false
rust-version = "1.31"

[dependencies]
safe-proc-macro2 = { version = "1.0.36", path = "../safe-proc-macro2/", default-features = false }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.52", features = ["diff"] }

[features]
default = ["proc-macro"]
# Disabling the proc-macro feature removes the dynamic library dependency on
# libproc_macro in the rustc compiler.
proc-macro = ["safe-proc-macro2/proc-macro"]

#[workspace]
#members = ["benches"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
