[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "text-processing"]
description = "Regex compiler for the safe-regex crate"
edition = "2018"
keywords = ["regex", "re", "regexp", "regular", "expression"]
license = "Apache-2.0"
name = "safe-regex-compiler"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
version = "0.2.3"

[dependencies]
safe-proc-macro2 = { version = "1", path = "../safe-proc-macro2/" }
safe-quote = { version = "1", path = "../safe-quote/" }

[dev-dependencies]
