[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Macro for the safe-regex package"
edition = "2018"
license = "Apache-2.0"
name = "safe-regex-macro"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
version = "0.1.0"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
safe-regex-macro-impl = { version = "^0.1.0", path = "../safe-regex-macro-impl/" }

[dev-dependencies]
