[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Macro for the safe-regex package"
edition = "2018"
license = "Apache-2.0"
name = "safe-regex-macro"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
version = "0.2.3"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
safe-proc-macro2 = { version = "1", path = "../safe-proc-macro2/" }
safe-regex-compiler = { version = "^0.2.0", path = "../safe-regex-compiler/" }

[dev-dependencies]
safe-regex = { version = "0", path = "../safe-regex/" }
