[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "text-processing"]
description = "Safe library for parsing regular expressions"
edition = "2018"
keywords = ["regex", "re", "regexp", "regular", "expression"]
license = "Apache-2.0"
name = "safe-regex-parser"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
version = "0.1.0"

[dependencies]

[dev-dependencies]
