[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["parsing", "text-processing"]
description = "Safe regular expression library"
edition = "2018"
keywords = ["regex", "re", "regexp", "regular", "expression"]
license = "Apache-2.0"
name = "safe-regex"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/safe-regex-rs"
version = "0.2.2"

[dependencies]
safe-regex-macro = { version = "^0.2.0", path = "../safe-regex-macro/" }

[dev-dependencies]
